tests/toylang/pos/000093_cdrc2.toylang
program a = { if a then sleep else while a do sleep; } .
