tests/toylang/neg/000912_mutation.toylang
program a = { if do then sleep; } .
